// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accessibility Tests Elements can set accessibilityState:selected to false 1`] = `
{
  "Automation Tree": {
    "AutomationId": "Selectable item 1",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Selectable item 1",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Unselected",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selectable item 1",
      "TestId": "Selectable item 1",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(135, 206, 250, 255)",
    },
    "Comment": "Selectable item 1",
    "Offset": "0, 0, 0",
    "Size": "150, 75",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "150, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "150, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Elements can set accessibilityState:selected to true 1`] = `
{
  "Automation Tree": {
    "AutomationId": "Selectable item 1",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "Name": "Selectable item 1",
    "SelectionItemPattern.IsSelected": true,
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Selected",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selectable item 1",
      "TestId": "Selectable item 1",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(128, 128, 128, 255)",
    },
    "Comment": "Selectable item 1",
    "Offset": "0, 0, 0",
    "Size": "150, 75",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "150, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "150, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Accessibility Tests Selectable items must have a Selection Container. Elements can set accessibilityState:multiselectable and accessibilityState:required to true 1`] = `
{
  "Automation Tree": {
    "AutomationId": "selection-container",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "Name": "Selection Container",
    "SelectionPattern.CanSelectMultiple": true,
    "SelectionPattern.IsSelectionRequired": true,
    "__Children": [
      {
        "AutomationId": "Selectable item 1",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 1",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
          },
        ],
      },
      {
        "AutomationId": "Selectable item 2",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 2",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
          },
        ],
      },
      {
        "AutomationId": "Selectable item 3",
        "ControlType": 50000,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "button",
        "Name": "Selectable item 3",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Unselected",
          },
        ],
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "Selection Container",
      "TestId": "selection-container",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ScrollViewComponentView",
        "_Props": {
          "AccessibilityLabel": "List of selectable items",
        },
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
            "_Props": {},
            "__Children": [
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 1",
                  "TestId": "Selectable item 1",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 2",
                  "TestId": "Selectable item 2",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
              {
                "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
                "_Props": {
                  "AccessibilityLabel": "Selectable item 3",
                  "TestId": "Selectable item 3",
                },
                "__Children": [
                  {
                    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
                    "_Props": {},
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "selection-container",
    "Offset": "0, 0, 0",
    "Size": "873, 225",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "873, 225",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 225",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 0)",
                },
                "Offset": "0, 0, 0",
                "Size": "873, 225",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Brush": {
                      "Brush Type": "ColorBrush",
                      "Color": "rgba(0, 0, 0, 0)",
                    },
                    "Offset": "0, 0, 0",
                    "Size": "873, 225",
                    "Visual Type": "SpriteVisual",
                    "__Children": [
                      {
                        "Offset": "0, 0, 0",
                        "Size": "873, 225",
                        "Visual Type": "SpriteVisual",
                        "__Children": [
                          {
                            "Offset": "0, 0, 0",
                            "Size": "873, 225",
                            "Visual Type": "SpriteVisual",
                            "__Children": [
                              {
                                "Offset": "0, 0, 0",
                                "Size": "150, 75",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 1",
                                    "Offset": "0, 0, 0",
                                    "Size": "150, 75",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "150, 29.000015",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "150, 29.000015",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                              {
                                "Offset": "0, 75, 0",
                                "Size": "150, 75",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 2",
                                    "Offset": "0, 0, 0",
                                    "Size": "150, 75",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "150, 29.000015",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "150, 29.000015",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                              {
                                "Offset": "0, 150, 0",
                                "Size": "150, 75",
                                "Visual Type": "SpriteVisual",
                                "__Children": [
                                  {
                                    "Brush": {
                                      "Brush Type": "ColorBrush",
                                      "Color": "rgba(135, 206, 250, 255)",
                                    },
                                    "Comment": "Selectable item 3",
                                    "Offset": "0, 0, 0",
                                    "Size": "150, 75",
                                    "Visual Type": "SpriteVisual",
                                    "__Children": [
                                      {
                                        "Offset": "0, 0, 0",
                                        "Size": "150, 29.000015",
                                        "Visual Type": "SpriteVisual",
                                        "__Children": [
                                          {
                                            "Offset": "0, 0, 0",
                                            "Size": "150, 29.000015",
                                            "Visual Type": "SpriteVisual",
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                ],
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              {
                "Offset": "-19.5, 0, 0",
                "Size": "18, 0",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "-18, 4.5, 0",
                    "Opacity": 0,
                    "Size": "18, 216",
                    "Visual Type": "Visual",
                  },
                  {
                    "Offset": "0, 6, 0",
                    "Opacity": 0,
                    "Size": "18, 18",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "0, -24, 0",
                    "Opacity": 0,
                    "Size": "18, 18",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "-7.5, 24, 0",
                    "Size": "9, 177",
                    "Visual Type": "Visual",
                  },
                ],
              },
              {
                "Offset": "0, -19.5, 0",
                "Size": "0, 18",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "4.5, -18, 0",
                    "Opacity": 0,
                    "Size": "864, 18",
                    "Visual Type": "Visual",
                  },
                  {
                    "Offset": "6, 0, 0",
                    "Opacity": 0,
                    "Size": "18, 18",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "-24, 0, 0",
                    "Opacity": 0,
                    "Size": "18, 18",
                    "Visual Type": "SpriteVisual",
                  },
                  {
                    "Offset": "24, -7.5, 0",
                    "Size": "825, 9",
                    "Visual Type": "Visual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;
